/*
 * This file was generated by the Gradle 'init' task.
 */


plugins {
    id 'org.springframework.boot' version '2.2.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
    id 'war'
}

repositories {
    mavenLocal()
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-web') {
        exclude(module: 'tomcat-embed-websocket') /* Because of this exclusion - app is able to run on any application server (otherwise it runs only on Tomcat) */
    }
    implementation 'org.springframework.boot:spring-boot-devtools' /* Activates hot-swap (reload) in spring-boot */

    implementation 'commons-io:commons-io:2.6'
    implementation 'org.apache.commons:commons-lang3:3.10'

    implementation 'org.reflections:reflections:0.9.12'

    implementation 'org.apache.cxf:cxf-rt-features-logging:3.2.0' /* For FileUtils */

    // JAXB
    implementation 'javax.xml.bind:jaxb-api:2.3.0'
    implementation 'javax.activation:activation:1.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.0'

    implementation 'org.aspectj:aspectjweaver:1.9.5'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }

    compileOnly 'org.projectlombok:lombok:1.18.8'
    annotationProcessor 'org.projectlombok:lombok:1.18.8'
}

group = 'hofls.com.github'
sourceCompatibility = '1.8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
